deployments/hqoas-spring/common/java-runner-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-runner
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: java-runner
    spec:
      serviceAccountName: java-runner-sa
      automountServiceAccountToken: true
      containers:
      - image: hqoas-jdbc-demo
        imagePullPolicy: Always
        name: k8s-java-runner
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
